...
            "state": "translated",
            "value": "外观"
          }
        }
      }
    },
    "Archive": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "アーカイブ"
          }
...
            "state": "translated",
            "value": "收信和发信服务器都需要填写地址和端口"
          }
        }
      }
    },
    "Built in": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "組み込み"
          }
...
            "state": "translated",
            "value": "内置"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "キャンセル"
          }
...
            "state": "translated",
            "value": "深色"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "削除"
          }
...
            "state": "translated",
            "value": "已停用"
          }
        }
      }
    },
    "Inbox": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "受信"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "收件箱"
          }
        }
      }
    },
    "Incoming encryption": {
      "localizations": {
...
            "state": "translated",
            "value": "列表"
          }
        }
      }
    },
    "Lists": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "リスト"
          }
...
            "state": "translated",
            "value": "全部标记为已读？"
          }
        }
      }
    },
    "Mark as junk": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "迷惑メールにする"
          }
...
            "state": "translated",
            "value": "标为推广"
          }
        }
      }
    },
    "Mark as unread": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "未読にする"
          }
...
            "state": "translated",
            "value": "周一早上"
          }
        }
      }
    },
    "More": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "その他"
          }
...
            "value": "新規メッセージ"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "写邮件"
          }
        }
      }
    },
    "Next attempt %@": {
      "localizations": {
...
            "state": "translated",
            "value": "部分送达"
          }
        }
      }
    },
    "Password": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "パスワード"
          }
...
            "state": "translated",
            "value": "已暂停"
          }
        }
      }
    },
    "Permissions": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "権限"
          }
...
            "state": "translated",
            "value": "搜索此发件人"
          }
        }
      }
    },
    "Select": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "選択"
          }
...
            "state": "translated",
            "value": "服务器"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
...
            "state": "translated",
            "value": "以纯文本显示，不加载图片与格式。"
          }
        }
      }
    },
    "Sign in": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "サインイン"
          }
...
            "state": "translated",
            "value": "登录你的邮箱"
          }
        }
      }
    },
    "Sign out": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "サインアウト"
          }
...
            "state": "translated",
            "value": "本周末"
          }
        }
      }
    },
    "This will permanently delete all messages.": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "含まれるすべてのメールが完全に削除されます。"
          }
...
            "state": "translated",
            "value": "someone@example.com"
          }
        }
      }
    },
    "you@example.com": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "you@example.com"
          }
...
